# grpc-barcode-detector

./: .clang-format  .gitignore  BUILD  CMakeLists.txt  Dockerfile  README.md  generate-go.sh  server.cc  tracer_common.h
proto/: barcode.proto
